<resources>
    <string name="app_name">Comercio Em Rede</string>
    <string name="login">Login</string>
    <string name="cadastro">cadastro</string>
    <string name="logo">LOGO</string>
    <string name="modo_loja">Modo Loja</string>
    <string name="tela_login_loja">tela login loja</string>
    <string name="tela_cadastro_loja">Tela cadastro loja</string>
    <string name="tela_login_cliente">tela login cliente</string>
    <string name="tela_cadastro_cliente">tela cadastro cliente</string>
    <string name="nome_completo">Nome completo:</string>
    <string name="senha">Senha</string>
    <string name="email">Email:</string>
    <string name="login_cli">Login:</string>
    <string name="senha_cli">Senha:</string>
    <string name="email_cli">Email:</string>
    <string name="nome_completo_cli">Nome completo:</string>
    <string name="confirmar_senha">Confirmar senha:</string>
    <string name="cadastrar_cli">CADASTRAR</string>
    <string name="logoRC">logoRC</string>
    <string name="bgRC">bgRC</string>
    <string name="nome_completoCLI">Nome Completo:</string>
    <string name="nome">Nome:</string>
    <string name="confirmar_senhaCLI">Confirmar senha:</string>
    <string name="senhaCLI">Senha:</string>
    <string name="telefoneCLI">Telefone:</string>
    <string name="cpfCLI">CPF:</string>
    <string name="loginCLI">Login</string>
    <string name="loginLOJ">LOGIN</string>
    <string name="emailLOJ">Email:</string>
    <string name="senhaLOJ">Senha:</string>
    <string name="cp">CP</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="n_o_possui_um_conta">Não possui um conta?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="title_activity_tela_principal_c_l_i">TelaPrincipalCLI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="fragment_inicio">Início</string>
    <string name="fragment_meus_produtos">Meus Produtos</string>
    <string name="fragment_buscar">Buscar</string>
    <string name="fragment_historico">Histórico</string>
    <string name="fragment_avaliados">Avaliados</string>
    <string name="fragment_perfil">Perfil</string>


    <string name="valor_do_produto">Valor do produto:</string>
    <string name="quantidade_do_produto">Quantidade do produto:</string>
    <string name="preco_do_produto">Preço do produto:</string>
    <string name="salvar_produto">Salvar produto</string>
    <string name="enviar_foto">Enviar foto</string>

    <string name="todo2">TODO</string>
    <string name="tipo_de_produto">Tipo de produto:</string>
    <string name="cnpj">CNPJ:</string>
    <string name="cep">CEP:</string>
    <string name="fazer_login">Fazer Login</string>
    <string name="ja_possui_uma_conta">Já possui uma conta?</string>
    <string name="nome_da_loja">Nome da loja:</string>
    <string name="cadastrar_produto">CADASTRAR PRODUTO</string>
    <string name="nome_do_produto">Nome do produto:</string>
    <string name="title_activity_tela_principal">TelaPrincipal</string>

    <string name="sou_comerciante">Sou Comerciante</string>
    <string name="sou_cliente">Sou Cliente</string>

    <string-array name="tipo">
        <item>BEBIDAS</item>
        <item>CARNES</item>
        <item>GULOSEIMAS</item>
        <item>HIGIENE</item>
        <item>HORTIFRUTI</item>
        <item>LIMPEZA</item>
        <item>NÃO PERECÍVEIS</item>
        <item>PADARIA</item>
    </string-array>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_tela_local">TelaLocal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_hint">search_hint</string>

</resources>
