<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_inicio">
    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.comercioemrede.fragment.Inicio"
        android:label=""
        tools:layout="@layout/fragment_inicio"/>

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.comercioemrede.fragment.Perfil"
        android:label="@string/fragment_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/nav_avaliados"
        android:name="com.example.comercioemrede.fragment.Avaliados"
        android:label="@string/fragment_avaliados"
        tools:layout="@layout/fragment_avaliados" />
    <fragment
        android:id="@+id/nav_produtos"
        android:name="com.example.comercioemrede.fragment.MeusProdutos"
        android:label="@string/fragment_meus_produtos"
        tools:layout="@layout/fragment_meus_produtos" />
    <fragment
        android:id="@+id/nav_sair"
        android:name="com.example.comercioemrede.fragment.Sair"
        />

</navigation>